# SynRXN

./: .dockerignore  .flake8  .gitignore  CITATION.cff  Dockerfile.service  README.md  baseline.py  example.ipynb  lint.sh  manifest.json  manifest.schema.json  pyproject.toml  requirements.txt  zenodo_record_17297723.json
.github/: dependabot.yml
.github/workflows/: build_manifest.yml  publish-package.yml  test-and-lint.yml
Data/: LICENSE  metadata.yaml
Data/Benchmark/result/classification/: ecreact_1.json  (+11 more)
Data/results_benchmark/: classification_rows.csv  property_rows.csv  summary_classification.csv  summary_prop.csv
Test/: test_aam_validator_compatibility.py  test_catalog_ui.py  test_cli.py  test_data_loader.py  test_manifest.py  test_query.py  test_service.py
Test/cluster/: test_butina.py  test_ecfp.py  test_wlfp.py
Test/data/: test_catalog.py  test_data_loader.py  test_github_client.py  test_utils.py  test_zenodo_client.py
Test/fps/: test_ecfp.py  test_wlfp.py
Test/split/: test_repeated_group_aware.py  test_repeated_kfold.py
Test/statistics/: test_assumptions.py  test_common.py  test_non_parametric.py  test_parametric.py  test_runner.py
doc/: CHANGELOG_DOCS_UPDATE.md  Makefile  README.md  aam_validation.rst  api.rst  catalog.rst  conf.py  data_concept.rst  data_records.rst  getting_started.rst  index.rst  issues.rst  make.bat  paper.rst  query_and_service.rst  reference.rst  refs.bib  requirements.txt  tutorials_and_examples.rst  whats_new.rst
doc/_static/: aam-validator-comparison.json  catalog-data.js  catalog-data.json  catalog.js  custom.css  query-benchmark.json
doc/_templates/: synrxn-navbar.html  synrxn-sidebar-section.html
script/: aam.ipynb  baseline.py  benchmark_query_layer.py  buid_da.py  build_aam_dataset.py  build_classification_dataset.py  build_enzyme_map.py  build_property_dataset.py  build_rbl_dataset.py  build_synthesis_dataset.py  classification.ipynb  compare_aam_validators.py  property.ipynb  rbl.ipynb  synthesis.ipynb
script/process/: aam.py  rbl.py
synrxn/: __init__.py  __main__.py  build_catalog.py  build_manifest.py  data_loader.py  query.py  service.py  validate_data.py  verify_manifest.py
synrxn/aam/: aam_validator.py  its_extraction.py  utils.py
synrxn/baseline/: classification.py  property.py
synrxn/clean/: synrbl.py
synrxn/data/: __init__.py  cache.py  catalog.py  data_loader.py  sources.py  zenodo_client.py
synrxn/io/: io.py
synrxn/metrics/: template.py
synrxn/split/: repeated_kfold.py
synrxn/statistics/: auto_test.py  parametric.py
(+13 files in other folders)
