[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synrxn"
version = "1.1.1"
authors = [
    { name = "Tieu Long Phan", email = "tieu@bioinf.uni-leipzig.de" }
]
description = "Reaction Database for benchmarking"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=2.2.0",
  "pandas>=1.5.3",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "synkit>=1.5.0,<1.6.0",
  "scikit-learn>=1.7.2",
]

[project.scripts]
synrxn = "synrxn.__main__:main"
synrxn-service = "synrxn.service:main"

[project.optional-dependencies]
all = [
  "duckdb>=1.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pyarrow>=20.0.0",
  "scikit-posthocs>=0.11.4",
  "scipy>=1.16.2",
  "seaborn>=0.13.0",
  "statsmodels>=0.14.0",
  "synrbl>=1.0.4",
  "openpyxl>=3.1.5",
]

maintenance = [
  "openpyxl>=3.1.5",
]

dev = [
  "build>=1.2.0",
  "flake8>=7.0.0",
  "hatchling>=1.25.0",
  "pytest>=8.0.0",
  "PyYAML>=6.0",
  "httpx>=0.28.0"
]

query = [
  "duckdb>=1.3.0",
  "pyarrow>=20.0.0"
]

service = [
  "duckdb>=1.3.0",
  "fastapi>=0.115.0",
  "pyarrow>=20.0.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0"
]

docs = [
  "sphinx>=6.0",
  "sphinx-rtd-theme",
  "sphinxcontrib-bibtex",
  "sphinx_copybutton",
  "pydata_sphinx_theme",
]

[project.urls]
homepage = "https://github.com/TieuLongPhan/synrxn"
source = "https://github.com/TieuLongPhan/synrxn"
issues = "https://github.com/TieuLongPhan/synrxn/issues"
documentation = "https://synrxn.readthedocs.io/en/latest/"

# ------------------------------
# Hatch build configuration
# ------------------------------
# Tell hatch explicitly which package(s) to include in the wheel. Adjust
# the value of `packages` to match your repository layout (see notes below).
[tool.hatch.build.targets.wheel]
# If your package lives at the top-level as `synrxn/`, use:
packages = ["synrxn"]
# Include extra top-level files in the wheel (useful when metadata references them)
include = [
  "README.md",
  "LICENSE",
  "manifest.schema.json",
]

[tool.hatch.build.targets.wheel.force-include]
"manifest.schema.json" = "synrxn/manifest.schema.json"
"Data/metadata.yaml" = "synrxn/data/metadata.yaml"

[tool.hatch.build.targets.sdist]
include = [
  "synrxn",
  "Data/metadata.yaml",
  "README.md",
  "LICENSE",
  "manifest.schema.json",
]
